--- a/client/views/partials/tripSheets/tripSheet.html
+++ b/client/views/partials/tripSheets/tripSheet.html
@@ -167,7 +167,8 @@
             <td class="col-sm-2">
                 <ui-select ng-model="sheet.partyId" theme="select2" title="Choose a Party"
                            append-to-body="true" style="width: 250px;"
-                           ng-disabled="sheet.loadingPoint === 'In Transit' || sheet.loadingPoint === 'No Trips' || sheet.loadingPoint === 'Not unloaded'">
+                           ng-disabled="sheet.loadingPoint === 'In Transit' || sheet.loadingPoint === 'No Trips' || sheet.loadingPoint === 'Not unloaded'
+                           || sheet.loadingPoint === null">
                     <ui-select-match placeholder=" Select a Party" class="form-control"
                                      style="height: 42px;text-align: left;">
                         {{$select.selected.name || sheet.partyName}}
