changes in anjana invoice

--- a/client/views/partials/Invoice/invoiceList.html
+++ b/client/views/partials/Invoice/invoiceList.html
@@ -64,7 +64,7 @@
                 invoice.quantity}}
             </td>
             <td data-title="'Status'" sortable="'status'" class="clickable-item">{{
-                invoice.status}}
+                invoice.status  || '---'}}
             </td>
             <td data-title="'Action'" class="col-sm-2">
                 <a href="#" class="btn" ng-click="goToEditPage(invoice._id)">
