trip sheet added

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -150,7 +150,8 @@
                                             <div class="panel-body custom-panel-body">
                                                 <left-menu label="Trips" ui-sref="trips"></left-menu>
                                                 <left-menu ng-class="{hide:driverSheetEnabled === 'false'}"  label="DriverSheet" ui-sref="driversheet"></left-menu>
-                                               <left-menu  ng-class="{hide:tripSheetEnabled === 'false'}" label="TripSheet" ui-sref="tripsheet"></left-menu>
+                                              <left-menu  ng-class="{hide:tripSheetEnabled === 'false'}" label="TripSheet" ui-sref="tripsheet"></left-menu>
+                                               <left-menu  ng-class="{hide:tripSheetForDeepakEnabled === 'false'}" label="TripSheet" ui-sref="tripsheetfordeepaktransport"></left-menu>
                                                 <left-menu ng-class="{hide:expenseSheetEnabled === 'false'}"label="ExpensesSheet" ui-sref="expensessheet"></left-menu>
                                                  <left-menu ng-class="{hide:receiptsEnabled === 'false'}"label="Receipts" ui-sref="receipts"></left-menu>
                                                 <left-menu ng-class="{hide:paymentsEnabled === 'false'}"label="Payments" ui-sref="payments"></left-menu>
