--- a/client/views/partials/admin/services/addNewAccount.html
+++ b/client/views/partials/admin/services/addNewAccount.html
@@ -241,6 +241,15 @@
                                <li>
                                    <div class="checkbox">
                                        <label>
+                                           <input type="checkbox" value="" ng-model="accountDetails.tripSheetForDeepakEnabled">
+                                           <span class="cr"><i class="cr-icon fa fa-check"></i></span>
+                                           TripSheetForDeepak
+                                       </label>
+                                   </div>
+                               </li>
+                               <li>
+                                   <div class="checkbox">
+                                       <label>
                                            <input type="checkbox" value="" ng-model="accountDetails.driverSheetEnabled">
                                            <span class="cr"><i class="cr-icon fa fa-check"></i></span>
                                            Driver Sheet
